syntax = "proto3";

package ployz;

option go_package = "ployz/daemon/pb";

service Daemon {
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
  rpc InitNetwork(InitNetworkRequest) returns (InitNetworkResponse);
}

message GetStatusRequest {}

message GetStatusResponse {
  string name = 1;
  string public_key = 2;
  string network_phase = 3;
  string version = 4;
}

message InitNetworkRequest {
  string name = 1;
}

message InitNetworkResponse {}
